--- a/css-aspect-ratio.css
+++ b/css-aspect-ratio.css
@@ -11,6 +11,9 @@
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
+
+    Credit to Thierry Koblentz for the padding trick.
+    http://www.alistapart.com/articles/creating-intrinsic-ratios-for-video/
 */
 
 .aspect-ratio {
